compiler/testData/diagnostics/tests/incompleteCode/diagnosticWithSyntaxError/funKeyword.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
fun<!SYNTAX, SYNTAX!><!>